--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "initdb": "node ./bin/keystoredb -- --init-db"
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
@@ -17,6 +18,7 @@
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "node-fetch": "^3.2.10",
+    "openssl": "^2.0.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "realm-web": "^1.7.1",
