--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "initdb": "node ./bin/keystoredb -- --init-db"
+    "initdb": "node ./bin/keystoredb -- --init-db",
+    "dumpdb": "node ./bin/keystoredb -- --dump-db",
+    "restoredb": "node ./bin/keystoredb -- --restore-db"
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
