--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "debug": "node --inspect ./bin/www",
     "initdb": "node ./bin/keystoredb -- --init-db",
     "dumpdb": "node ./bin/keystoredb -- --dump-db",
     "restoredb": "node ./bin/keystoredb -- --restore-db"
